--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 						<li><h4>1. Práca so systémom</h4></li><br />
 						<li><h4>2. Vetvenie</h4></li><br />
 						<li><h4>3. Best practice</h4></li><br />
-						<li><h4>4. Zdroje</h4></li>
+						<li><h4>4. Inštalácia programov</h4></li><br />
+						<li><h4>5. Zdroje</h4></li>
 					</ul>
 				</section>
 				<section>
@@ -58,15 +59,68 @@
 						<h3>1. Práca so systémom</h3><br />
 						<ul style="margin: 0; padding: 0; list-style: none;">
 							<li>1.1 Získanie repozitaru (init, clone)</li><br />
-							<li>1.2 Nahrávanie zmien a história (status, diff, add, commit, log)</li><br />	
-							<li>1.3 Rušenie zmien (checkout, revert, reset)</li><br />
-							<li>1.3 Práca so vzdialeným repozitárom (remote, fetch, pull, push)</li>	
+							<li>1.2 Stavy v ktorých sa môže súbor nachádzať</li><br />
+							<li>1.3 Nahrávanie zmien a história (status, add, commit, log)</li><br />	
+							<li>1.4 Rušenie zmien (checkout, revert, reset)</li><br />
+							<li>1.5 Práca so vzdialeným repozitárom (fetch, push)</li>	
 						</ul>
 					</section>
-					<section></section>
-					<section></section>
-					<section></section>
-					<section></section>
+					<section>
+						<h4>1.1 Získanie repozitaru (git init)</h4>
+						<img src="images/1_init.png">
+					</section>
+					<section>
+						<h4>1.1 Získanie repozitaru (git clone &lt;url&gt; &lt;dir&gt;)</h4>
+						<img src="images/1_clone.png">
+					</section>
+					<section>
+						<h4>1.2 Stavy v ktorých sa môže súbor nachádzať</h4><br />
+						<img src="images/1_file_lifecycle.png">
+					</section>
+					<section>
+						<h4>1.3 Nahrávanie zmien a história (git status)</h4>
+						<img src="images/1_status.png">
+					</section>
+					<section>
+						<h4>1.3 Nahrávanie zmien a história (git add)</h4>
+						<img src="images/1_add.png">
+					</section>
+					<section>
+						<h4>1.3 Nahrávanie zmien a história (git commit -m "message")</h4>
+						<img src="images/1_commit.png">
+					</section>
+					<section>
+						<h4>1.3 Nahrávanie zmien a história (git log)</h4>
+						<img src="images/1_after_commit.png">
+					</section>
+					<section>
+						<h4>1.4 Rušenie zmien (git checkout &lt;commit id&gt;)</h4>
+						<img src="images/1_commit_checkout1.png">
+					</section>
+					<section>
+						<h4>1.4 Rušenie zmien (git checkout &lt;commit id&gt;)</h4>
+						<img src="images/1_commit_checkout2.png">
+					</section>
+					<section>
+						<h4>1.4 Rušenie zmien (git reset --hard &lt;commit id&gt;)</h4>
+						<img src="images/1_commit_reset1.png">
+					</section>
+					<section>
+						<h4>1.4 Rušenie zmien (git reset --hard &lt;commit id&gt;)</h4>
+						<img src="images/1_commit_reset2.png">
+					</section>
+					<section>
+						<h4>1.5 Práca so vzdialeným repozitárom (git fetch origin master)</h4>
+						<img src="images/1_fetch.png">
+					</section>
+					<section>
+						<h4>1.5 Práca so vzdialeným repozitárom (git fetch origin master)</h4>
+						<img src="images/1_fetch2.png">
+					</section>
+					<section>
+						<h4>1.5 Práca so vzdialeným repozitárom (git push origin master)</h4>
+						<img src="images/1_push.png">
+					</section>
 				</section>
 
 				<section>
@@ -82,27 +136,35 @@
 					</section>
 					<section>
 						<h4>2.1 Čo je to vetva</h4>
+						<img src="images/2_branch.png">
 					</section>
 					<section>
 						<h4>2.2 Vytvorenie novej vetvy (git branch devel)</h4>
+						<img src="images/2_branch_add.png">
 					</section>
 					<section>
 						<h4>2.3 Prepínanie medzi vetvami (git checkout devel)</h4>
+						<img src="images/2_branch_checkout.png">
 					</section>
 					<section>
-						<h4>2.4 Spájanie(git cherry-pick &lt;commit-id&gt;)</h4>
+						<h4>2.4 Spájanie (git cherry-pick &lt;commit-id&gt;)</h4>
+						<img src="images/2_chery-pick.png">
 					</section>
 					<section>
-						<h4>2.4 Spájanie(git rebase devel)</h3>
+						<h4>2.4 Spájanie (git rebase devel)</h4>
+						<img src="images/2_rebase.png">
 					</section>
 					<section>
-						<h4>2.4 Spájanie(git merge devel)</h3>
+						<h4>2.4 Spájanie (git merge devel)</h4>
+						<img src="images/2_merge.png">
 					</section>
 					<section>
-						<h4>2.4 Spájanie(git merge devel) 2</h3>
+						<h4>2.4 Spájanie (git merge devel) 2</h4>
+						<img src="images/2_merge2.png">
 					</section>
 					<section>
-						<h4>2.4 Zmazanie (git branch -d &lt;branch name&gt;)</h3>
+						<h4>2.4 Zmazanie (git branch -d &lt;branch name&gt;)</h4>
+						<img src="images/2_branch_remove.png">
 					</section>
 				</section>
 				<section>
@@ -110,16 +172,96 @@
 						<h3>3. Best practice</h3><br />
 						<ul style="margin: 0; padding: 0; list-style: none;">
 							<li>3.1 Štruktúra správy v revíziach</li><br />
-							<li>3.2 Pridávanie zmien do devel repozitára</li><br />	
-							<li>3.3 Načo nezabúdať</li>
+							<li>3.2 Práca s projektom</li><br />
+							<li>3.3 Odosielanie zmien na server a riešenie konfliktov</li><br />
 						</ul>
 					</section>
-					<section></section>
-					<section></section>
-					<section></section>
+					<section>
+						<h4>3.1 Štruktúra správy v revíziach (git commit -m "sprava")</h4><br />
+						<pre style="text-align: left">HOTFIX/TASK/DEVEL/...: Strucny popis
+
+Podrobnejsi popis</pre>
+					</section>
+					<section>
+						<h4>3.2 Práca s repozitárom</h4><br />
+						<ul style="font-size: 24px;">
+							<li>pri práci nepoužívať vetvu master, vytvoriť si vždy inú napriklad devel alebo názov tasku, ktorý som dostal</li>
+							<li>vetva master slúži na zlučovanie a nahrávanie zmien na server</li>
+							<li>pravidelne ukladať revízie (<a href="#/2/5">git add</a>, <a href="#/2/6">git commit -m "message"</a>)</li>
+							<li>snažiť sa rozdelovať revízie do logických celkov (napríklad, ak vykonám nejaky task alebo opravým bug)</li>
+							<li>na sťazhovanie zmien so servera nepoužívať pull, ale fetch</li>
+							<li>keď sa chcem prepnúť medzi vetvami, spájať vetvi alebo sťahovať vytvorené zmeny so servera vždy je potrebné mať uložené všetký zmeny u seba v lokalnom repozitary a v aktualnej vetve
+							<li>aspoň dva krát denne skontrolovať, či nie su nové revízie(commit) nahraté na servery, ak ano spojiť(merge) ich so svojou master vetvou(git fetch, git merge origin/master)</li>
+						</ul>
+					</section>
+					<section>
+						<h4>3.3 Pridávanie zmien do master repozitára</h4><br />
+						<ul style="font-size: 24px;">
+							<li>skontrolovať, či mám v aktulnej vetve uložené zmeny (git status), ak nie uložiť (git commit)</li>
+							<!--
+							<li>2. prepnúť sa do vetvy master (git checkout master)</li>
+							<li>3. stiahnúť aktualnú verziu repozitára zo servera (git fetch)</li>
+							<li>4. spojiť vetvu origin/master, ktorá sa stiahla(git fetch) s našou vetvou master(git merge origin/master)</li>
+							<li>5. ak nie su konfliktu spojiť našu vetvu master s vetvou devel (git merge master/rebase/cherry-pick)</li>
+							<li>6. nahrať zmeny na server (git push origin master)</li>
+							-->
+						</ul>
+					</section>
+					<section>
+						<h4>3.3.1 Pridávanie zmien do master repozitára</h4>
+						<img src="images/41_conflict_1.png">
+					</section>
+					<section>
+						<h4>3.3.2 Stiahnutie zmien zo servera (git fetch)</h4>
+						<img src="images/42_conflict_fetch.png">
+					</section>
+					<section>
+						<h4>3.3.3 Prepnutie na vetvu master (git checkout master)</h4>
+						<img src="images/43_conflict_checkout_from_hotfix_to_master.png">
+					</section>
+					<section>
+						<h4>3.3.4 Zlučenie vetvy master a hotfix (git merge hotfix)</h4>
+						<img src="images/44_conflict_merge_master_with_hofix.png">
+					</section>
+					<section>
+						<h4>3.3.5 Konflikt pri zlúčeni vetvy master s vetvou origin/master (git merge origin/master)</h4>
+						<img src="images/45_conflict_merge_master_with_origin-master.png">
+					</section>
+					<section>
+						<h4>3.3.6 Riešenie konfliktu</h4>
+						<img src="images/46_conflict_resolve1.png">
+					</section>
+					<section>
+						<h4>3.3.7 Vyriešenie konfliktu</h4>
+						<img src="images/47_conflict_resolve2.png">
+					</section>
+					<section>
+						<h4>3.3.8 Stav po vyriešení konfliktu <h4>
+						<img src="images/48_conflict_resolve3_merge_master-origin.png">
+					</section>
+					<section>
+						<h4>3.3.9 Nahranie zmien na server (git push origin master)</h4>
+						<img src="images/49_conflict_resolve4_push_origin_master.png">
+					</section>
+					<section>
+						<h4>3.3.10 Zmazanie vetvy hotfix (git branch -d hofix)</h4>
+						<img src="images/499_conflict_resolve5_branch_rm.png">
+					</section>
 				</section>
 				<section>
-					<h3>3. Zdroje</h3><br />
+					<h3>4. Inštalácia programov</h3><br />
+					<ul style="margin:0; list-style:none;">
+						<li><h4><strong>1. Git</strong> <a href="http://git-scm.com/downloads" target="_blank">http://git-scm.com/downloads</a></h4></li><br />
+						<li><h4><strong>2. Git GUI</strong> <a href="https://code.google.com/p/gitextensions/" target="_blank">https://code.google.com/p/gitextensions/</a></h4></li><br />
+						<li><h4><strong>3. Git Merge Tool</strong> <a href="http://kdiff3.sourceforge.net/" target="_blank">http://kdiff3.sourceforge.net/</a></h4></li>
+					</ul>
+				</section>
+				<section>
+					<h3>5. Zdroje</h3><br />
+					<ul style="margin:0; list-style:none;">
+						<li><h4><strong>1. Git dokumentacia</strong> <a href="http://git-scm.com/book/cs" target="_blank">http://git-scm.com/book/cs</a></h4></li><br />
+						<li><h4><strong>2. Git tutorial</strong> <a href="https://www.atlassian.com/git/tutorial/git-basics" target="_blank">https://www.atlassian.com/git/tutorial/git-basics</a></h4></li><br />
+					</ul>
 				</section>
 			</div>
 
