--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Podrobnejsi popis</pre>
 					<section>
 						<h4>3.3 Pridávanie zmien do master repozitára</h4><br />
 						<ul style="font-size: 24px;">
-							<li>skontrolovať, či mám v aktulnej vetve uložené zmeny (git status), ak nie uložiť (git commit)</li>
+							<li>Skontrolovať, či mám v aktulnej vetve uložené zmeny (git status), ak nie uložiť (git commit)</li>
 							<!--
 							<li>2. prepnúť sa do vetvy master (git checkout master)</li>
 							<li>3. stiahnúť aktualnú verziu repozitára zo servera (git fetch)</li>
@@ -208,7 +208,7 @@ Podrobnejsi popis</pre>
 						</ul>
 					</section>
 					<section>
-						<h4>3.3.1 Pridávanie zmien do master repozitára</h4>
+						<h4>3.3.1 Dokončenie práce na vetve hotfix</h4>
 						<img src="images/41_conflict_1.png">
 					</section>
 					<section>
