Pridanie slajdu o strukture pricinka _style

--- a/index.html
+++ b/index.html
@@ -234,6 +234,36 @@ aside[role="complimentary"] {
 						</pre>
 					</section>	
 				</section>
+				
+				<section>
+					<h3>Priečinok _style</h3><br />
+
+					<ul>
+						<li>
+							core
+							<ul>
+								<li>variables.scss</li>
+								<li>mixins.scss</li>
+								<li>buttons.scss</li>
+								<li>dialogs.scss...</li>
+							</ul>
+						</li><br />
+						<li>
+							librares
+							<ul>
+								<li>jquery-ui.css</li>
+								<li>jquery-ui-custom.css...</li>
+							</ul>
+						</li><br />
+						<li>
+							views
+							<ul>
+								<li>layauts/*.scss</li>
+								<li>partials/*.scss...</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
 
 				<section>
 					<h2>Zdroje</h2><br />
