--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<img src="images/1_commit_reset2.png">
 					</section>
 					<section>
-						<h4>1.5 Práca so vzdialeným repozitárom (git fetch origin master)</h4>
+						<h4>1.5 Práca so vzdialeným repozitárom (git fetch)</h4>
 						<img src="images/1_fetch.png">
 					</section>
 					<section>
