--- a/index.html
+++ b/index.html
@@ -46,15 +46,8 @@
 					<img src="images/sass-logo.png" alt="" style="border:none; box-shadow:none;" />	
 				</section>
 				<section>
-					<h2>Inštalácia</h2><br />
-					<ul style="margin: 0; list-style:none;">
-						<li>1.) Stiahnúť a nainštalovať http://www.rubyinstaller.org/</li><br />
-						<li>2.) Inštalácia Sass <em>gem install sass</em></li>
-					</ul>
-				</section>
-				<section>
 					<section>
-						<h2>Hlavné výhody</h2><br />
+						<h3>Rozšiřuje CSS o dynamické prvky:</h3><br />
 						<ul style="margin: 0; list-style:none;">
 							<li>1.) Premenné</li><br />
 							<li>2.) Vnáranie</li><br />
@@ -234,10 +227,8 @@ aside[role="complimentary"] {
 						</pre>
 					</section>	
 				</section>
-				
 				<section>
 					<h3>Priečinok _style</h3><br />
-
 					<ul>
 						<li>
 							core
@@ -264,7 +255,13 @@ aside[role="complimentary"] {
 						</li>
 					</ul>
 				</section>
-
+				<section>
+					<h2>Inštalácia</h2><br />
+					<ul style="margin: 0; list-style:none;">
+						<li>1.) Stiahnúť a nainštalovať http://www.rubyinstaller.org/</li><br />
+						<li>2.) Inštalácia Sass <em>gem install sass</em></li>
+					</ul>
+				</section>
 				<section>
 					<h2>Zdroje</h2><br />
 
