--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
 					<img src="images/sass-logo.png" alt="" style="border:none; box-shadow:none;" />	
 				</section>
 				<section>
+					<h3>Sass</h3><br />
+					<ul style="">
+						<li>Je to preprocesor</li><br />
+						<li>Rozdiel medzi sass a scss</li><br />
+						<li>Rozširuje CSS o dynamické prvky</li>
+					</ul>
+				</section>
+				<section>
 					<section>
-						<h3>Rozšiřuje CSS o dynamické prvky:</h3><br />
+						<h3>Rozširuje CSS o dynamické prvky:</h3><br />
 						<ul style="margin: 0; list-style:none;">
 							<li>1.) Premenné</li><br />
 							<li>2.) Vnáranie</li><br />
