Pridanie 5. bodu v 3. slajde

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<![endif]-->
 	</head>
 
-	<body>
+	<body id="biathlonmania">
 
 		<div class="reveal">
 
@@ -55,11 +55,12 @@
 				</section>
 				<section>
 					<h2>Spustenie</h2>
-					<ul style="margin: 0; list-style:none"><br />
+					<ul style="margin: 0; list-style:none">
 						<li>1.) Otvoriť cmd a prejsť do projektu</li><br />
 						<li>2.) Projekt musí obsahovať súbory <em>Gruntfile.js</em> a <em>package.json</em></li><br />
 						<li>3.) Pri prvom stiahnutí projektu pomomocou prikazu <em>npm install</em> doinštalovať potrebné moduly</li><br />	
-						<li>4.) Spustiť sledovanie príkazom <em>grunt watch</em></li>
+						<li>4.) Spustiť sledovanie príkazom <em>grunt watch</em></li><br />	
+						<li>5.) Po skončení, pred uploadnutim na server spustiť príkaz <em>grunt deploy</em></li>
 					</ul>
 				</section>
 			</div>
