--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ aside[role="complimentary"] {
 						<li>
 							core
 							<ul>
-								<li>variables.scss</li>
-								<li>mixins.scss</li>
+								<li>variables/*.scss</li>
+								<li>mixins/*.scss</li>
 								<li>buttons.scss</li>
 								<li>dialogs.scss...</li>
 							</ul>
